# System-Execution

./: .gitignore  .replit  Dockerfile.api-server  Dockerfile.v8-platform  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
attached_assets/: MASTER_PROMPT_1782022107580.txt  Pasted---1782022188204_1782022188204.txt  Pasted-Act-as-an-expert-Full-Stack-Software-Engineer-and-Senio_1781623383979.txt  Pasted-Act-as-an-expert-Full-Stack-Software-Engineer-and-Senio_1781623706947.txt  web_1782022161971.txt  ادوات_اكتشاف_الثغرات__1782022228700.txt  (+3 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/: __init__.py
backend/app/application/services/: auth_service.py  organization_service.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  events.py  exceptions.py  security.py
backend/app/domain/: __init__.py  enums.py
backend/app/domain/interfaces/: __init__.py
backend/app/domain/models/: __init__.py  ai_analysis.py  api_key.py  asset.py  audit_log.py  comment.py  feature_flag.py  finding.py  integration.py  license.py  notification.py  oauth_account.py  organization.py  plugin.py  project.py  report.py  role.py  scan.py  schedule.py  secret.py  session.py  user.py  worker.py
backend/app/infrastructure/: __init__.py  enterprise.py  logging_service.py  metrics_service.py  network_isolation.py  sandbox.py  secrets.py
backend/app/infrastructure/auth/: __init__.py
backend/app/infrastructure/message_bus/: rabbitmq.py
backend/app/infrastructure/queue/: __init__.py  celery_app.py
backend/app/infrastructure/storage/: __init__.py  object_storage.py
backend/app/plugin/: __init__.py  cli_generator.py  examples.py  plugin_cli.py
backend/app/plugin/executors/: __init__.py  docker_executor.py  firecracker_executor.py  k8s_executor.py  subprocess_executor.py
backend/app/plugin/integrations/: github_integration.py
backend/app/plugin/marketplace/: __init__.py
backend/app/plugin/sdk/: __init__.py  config.py  context.py  dependency_manager.py  health_monitor.py  lifecycle.py  manifest.py  manifest_validator.py  permission_manager.py  plugin_base.py  plugin_event_bus.py  types.py  version_manager.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/v1/: __init__.py  auth.py  health.py  plugins.py  routers.py  system.py  workers.py
backend/app/presentation/websockets/: manager.py
backend/app/queue/: __init__.py  autoscaler.py  scheduler.py  workflow.py
backend/app/workers/: __init__.py
backend/tasks/: __init__.py  scan_tasks.py
(+235 files in other folders)
