[project]
name = "v8-platform-backend"
version = "0.1.0"
description = "V8 Neural Exploitation Platform — Enterprise Backend"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "V8 Platform Team" }]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "httpx-oauth>=0.6.0",
    "python-jose>=3.3.0",
    "cryptography>=44.0.0",
    "pyjwt>=2.10.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "boto3>=1.36.0",
    "botocore>=1.36.0",
    "s3fs>=2024.12.0",
    "minio>=7.2.0",
    "pika>=1.3.2",
    "aio-pika>=9.5.0",
    "nats-py>=2.9.0",
    "websockets>=14.1",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",
    "sentry-sdk>=2.19.0",
    "asgi-correlation-id>=4.3.0",
    "fastapi-cache2>=0.2.0",
    "slowapi>=0.1.9",
    "pydantic-extra-types>=2.10.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "orjson>=3.10.0",
    "msgpack>=1.1.0",
    "gunicorn>=23.0.0",
    "python-saml>=3.0.0",
    "ldap3>=2.9.1",
    "webauthn>=3.0.0",
    "qrcode>=7.4.2",
    "pyotp>=2.9.0",
    "pillow>=11.1.0",
    "graphql-core>=3.2.0",
    "strawberry-graphql>=0.247.0",
    "temporalio>=1.9.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "sqlalchemy-utils>=0.41.0",
    "faker>=33.0.0",
    "factory-boy>=3.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "coverage>=7.6.0",
    "docker>=7.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
